# OpenGLAssignment

./: .gitmodules  CMakeLists.txt  clean_and_cmake.cmd  cmake.cmd
3rd/: CMakeLists.txt
3rd/glad/: CMakeLists.txt  Readme.txt
3rd/glad/include/glad/: glad.h
3rd/glad/src/: glad.c
cmakes/: Common.cmake
src/: CMakeLists.txt  color.h  main.cpp
src/common/: singleton.h
src/engine/: camera.cpp  camera.h  engine.cpp  engine.h
src/math/: math.h
src/render/: Light.h  graphic_api.h  material.cpp  material.h  material_manager.h  mesh.cpp  mesh.h  metrial.h  model.cpp  model.h  render_object.cpp  render_object.h  renderer.cpp  renderer.h  shader.cpp  shader.h  shader_manager.h  texture.cpp  texture.h  texture_manager.h
src/shader/: border_fragment.shader  border_vertex.shader  box_fragment.shader  fragment.shader  light_fragment.shader  light_vertex.shader  mesh_fragment.shader  mesh_vertex.shader  vertex.shader  window_fragment.shader  window_vertex.shader
